--- a/source/inference.Rmd
+++ b/source/inference.Rmd
@@ -338,10 +338,10 @@ We can visualize the population distribution of the price per night with a histo
 options(pillar.sigfig = 5)
 ```
 
-```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Population distribution of price per night (Canadian dollars) for all Airbnb listings in Vancouver, Canada.", fig.height = 3.5, fig.width = 4.5}
+```{r 11-example-means2, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Population distribution of price per night (dollars) for all Airbnb listings in Vancouver, Canada.", fig.height = 3.5, fig.width = 4.5}
 population_distribution <- ggplot(airbnb, aes(x = price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Price per night (Canadian dollars)", y = "Count") +
+  labs(x = "Price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
 population_distribution
@@ -383,10 +383,10 @@ We can create a histogram to visualize the distribution of observations in the
 sample (Figure \@ref(fig:11-example-means-sample-hist)), and calculate the mean
 of our sample.
 
-```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Distribution of price per night (Canadian dollars) for sample of 40 Airbnb listings.", fig.height = 3.5, fig.width = 4.5}
+```{r 11-example-means-sample-hist, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Distribution of price per night (dollars) for sample of 40 Airbnb listings.", fig.height = 3.5, fig.width = 4.5}
 sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Price per night (Canadian dollars)", y = "Count") +
+  labs(x = "Price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
 sample_distribution
@@ -434,7 +434,7 @@ sample_estimates
 
 sampling_distribution_40 <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Sample mean price per night (Canadian dollars)", y = "Count") +
+  labs(x = "Sample mean price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
 sampling_distribution_40
@@ -514,14 +514,14 @@ sample_estimates_500 <- rep_sample_n(airbnb, size = 500, reps = 20000) |>
 ## Sampling distribution n = 20
 sampling_distribution_20 <- ggplot(sample_estimates_20, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Sample mean price per night\n(Canadian dollars)", y = "Count") +
+  labs(x = "Sample mean price per night\n(dollars)", y = "Count") +
   ggtitle("n = 20") 
 
 ## Sampling distribution n = 50
 sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night\n(Canadian dollars)") +
+  xlab("Sample mean price per night\n(dollars)") +
   ggtitle("n = 50") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -529,7 +529,7 @@ sampling_distribution_50 <- ggplot(sample_estimates_50, aes(x = sample_mean)) +
 sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night\n(Canadian dollars)") +
+  xlab("Sample mean price per night\n(dollars)") +
   ggtitle("n = 100") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 
@@ -537,7 +537,7 @@ sampling_distribution_100 <- ggplot(sample_estimates_100, aes(x = sample_mean)) 
 sampling_distribution_500 <- ggplot(sample_estimates_500, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night\n(Canadian dollars)") +
+  xlab("Sample mean price per night\n(dollars)") +
   ggtitle("n = 500") +
   xlim(min_x(sampling_distribution_20), max_x(sampling_distribution_20))
 ```
@@ -672,7 +672,7 @@ sample_10 <- airbnb |>
   rep_sample_n(10)
 sample_distribution_10 <- ggplot(sample_10, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night (Canadian dollars)") +
+  xlab("Price per night (dollars)") +
   ylab("Count") + 
   ggtitle("n = 10")
 
@@ -681,7 +681,7 @@ sample_20 <- airbnb |>
 
 sample_distribution_20 <- ggplot(sample_20, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night (Canadian dollars)") +
+  xlab("Price per night (dollars)") +
   ylab("Count") + 
   ggtitle("n = 20")
 
@@ -690,7 +690,7 @@ sample_50 <- airbnb |>
 
 sample_distribution_50 <- ggplot(sample_50, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night (Canadian dollars)") +
+  xlab("Price per night (dollars)") +
   ylab("Count") + 
   ggtitle("n = 50")
 
@@ -699,7 +699,7 @@ sample_100 <- airbnb |>
 
 sample_distribution_100 <- ggplot(sample_100, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night (Canadian dollars)") +
+  xlab("Price per night (dollars)") +
   ylab("Count") + 
   ggtitle("n = 100")
 
@@ -708,7 +708,7 @@ sample_200 <- airbnb |>
 
 sample_distribution_200 <- ggplot(sample_200, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  xlab("Price per night (Canadian dollars)") +
+  xlab("Price per night (dollars)") +
   ylab("Count") + 
   ggtitle("n = 200")
 
@@ -779,12 +779,12 @@ one_sample <- one_sample |>
   ungroup() |> select(-replicate)
 ```
 
-```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Histogram of price per night (Canadian dollars) for one sample of size 40.", fig.height = 3.5, fig.width = 4.5}
+```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.pos = "H", out.extra="", fig.cap = "Histogram of price per night (dollars) for one sample of size 40.", fig.height = 3.5, fig.width = 4.5}
 one_sample
 
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Price per night (Canadian dollars)", y = "Count") +
+  labs(x = "Price per night (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
 one_sample_dist
@@ -810,7 +810,7 @@ boot1 <- one_sample |>
   rep_sample_n(size = 40, replace = TRUE, reps = 1)
 boot1_dist <- ggplot(boot1, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Price per night (Canadian dollars)", y =  "Count") + 
+  labs(x = "Price per night (dollars)", y =  "Count") + 
   theme(text = element_text(size = 12))
 
 boot1_dist
@@ -850,7 +850,7 @@ six_bootstrap_samples <- boot20000 |>
 
 ggplot(six_bootstrap_samples, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Price per night (Canadian dollars)", y = "Count") +
+  labs(x = "Price per night (dollars)", y = "Count") +
   facet_wrap(~replicate) +
   theme(text = element_text(size = 12))
 ```
@@ -881,7 +881,7 @@ tail(boot20000_means)
 
 boot_est_dist <- ggplot(boot20000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
-  labs(x = "Sample mean price per night \n (Canadian dollars)", y = "Count") +
+  labs(x = "Sample mean price per night \n (dollars)", y = "Count") +
   theme(text = element_text(size = 12))
 
 boot_est_dist
@@ -900,7 +900,7 @@ sample_estimates <- samples |>
 sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   ylab("Count") +
-  xlab("Sample mean price per night \n (Canadian dollars)")  
+  xlab("Sample mean price per night \n (dollars)")  
 
 annotated_sampling_dist <- sampling_dist +  
   xlim(min_x(sampling_dist), max_x(sampling_dist)) + 
