convert arrange/slice to slice_min in classification and regression

--- a/source/regression1.Rmd
+++ b/source/regression1.Rmd
@@ -233,13 +233,12 @@ sale price might be.
 For the example shown in Figure \@ref(fig:07-small-eda-regr), 
 we find and label the 5 nearest neighbors to our observation 
 of a house that is 2,000 square feet.
-\index{mutate}\index{slice}\index{arrange}\index{abs}
+\index{mutate}\index{slice\_min}\index{abs}
 
 ```{r 07-find-k3}
 nearest_neighbors <- small_sacramento |>
   mutate(diff = abs(2000 - sqft)) |>
-  arrange(diff) |>
-  slice(1:5) #subset the first 5 rows
+  slice_min(diff, n = 5)
 
 nearest_neighbors
 ```
