move slice_min/max back to viz where it appears first

--- a/source/classification1.Rmd
+++ b/source/classification1.Rmd
@@ -460,14 +460,7 @@ the $K=5$ neighbors that are nearest to our new point.
 You will see in the `mutate` \index{mutate} step below, we compute the straight-line
 distance using the formula above: we square the differences between the two observations' perimeter 
 and concavity coordinates, add the squared differences, and then take the square root.
-In order to find the $K=5$ nearest neighbors, we will use the `slice_min` function.
-
-> **Note:** Recall that in Chapter \@ref(intro), we used `arrange` followed by `slice` to
-> obtain the ten rows with the *largest* values of a variable. We could have instead used
-> the `slice_max` function for this purpose. The `slice_min` and `slice_max` functions
-> achieve the same goal as `arrange` followed by `slice`, but are slightly more efficient
-> because they are specialized for this purpose. In general, it is good to use more specialized
-> functions when they are available!
+In order to find the $K=5$ nearest neighbors, we will use the `slice_min` function. \index{slice\_min}
 
 ```{r 05-multiknn-1, echo = FALSE, fig.height = 3.5, fig.width = 4.5, fig.pos = "H", out.extra="", fig.cap="Scatter plot of concavity versus perimeter with new observation represented as a red diamond."}
 perim_concav <- bind_rows(cancer, 
