--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -922,10 +922,18 @@ are hard to distinguish, and the names of the landmasses are obscuring each
 other as they have been squished into too little space. But remember that the
 question we asked was only about the largest landmasses; let's make the plot a
 little bit clearer by keeping only the largest 12 landmasses. We do this using
-the `slice_max` function.  Then to give the labels enough
+the `slice_max` function: the `order_by` argument is the name of the column we 
+want to use for comparing which is largest, and the `n` argument specifies how many
+rows to keep. Then to give the labels enough
 space, we'll use horizontal bars instead of vertical ones. We do this by
-swapping the `x` and `y` variables:
-\index{slice\_max}
+swapping the `x` and `y` variables:\index{slice\_max}\index{slice\_min}
+
+> **Note:** Recall that in Chapter \@ref(intro), we used `arrange` followed by `slice` to
+> obtain the ten rows with the largest values of a variable. We could have instead used
+> the `slice_max` function for this purpose. The `slice_max` and `slice_min` functions
+> achieve the same goal as `arrange` followed by `slice`, but are slightly more efficient
+> because they are specialized for this purpose. In general, it is good to use more specialized
+> functions when they are available!
 
 ```{r 03-data-islands-bar-2, warning=FALSE, message=FALSE, fig.width=5, fig.height=2.75, fig.align = "center", fig.pos = "H", out.extra="", fig.cap = "Bar plot of size for Earth's largest 12 landmasses."}
 islands_top12 <- slice_max(islands_df, order_by = size, n = 12)
