--- a/source/viz.Rmd
+++ b/source/viz.Rmd
@@ -926,7 +926,7 @@ the `slice_max` function: the `order_by` argument is the name of the column we
 want to use for comparing which is largest, and the `n` argument specifies how many
 rows to keep. Then to give the labels enough
 space, we'll use horizontal bars instead of vertical ones. We do this by
-swapping the `x` and `y` variables:\index{slice\_max}\index{slice\_min}
+swapping the `x` and `y` variables.\index{slice\_max}\index{slice\_min}
 
 > **Note:** Recall that in Chapter \@ref(intro), we used `arrange` followed by `slice` to
 > obtain the ten rows with the largest values of a variable. We could have instead used
