minor wordsmithing / bugfix

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -3,7 +3,7 @@
 ## Overview
 
 In this chapter, you'll learn how to install all of the software 
-needed to do the data science covered in this book on your own computer.
+needed to follow along with this book on your own computer.
 
 ## Chapter learning objectives
 
@@ -275,8 +275,9 @@ correctly sourced.
 ## Downloading the worksheets for this book
 
 The worksheets containing practice exercises for this book 
-can be downloaded by visiting 
-[https://worksheets.datasciencebook.ca](https://worksheets.datasciencebook.ca).
-The worksheets are contained within the compressed zip folder that will be downloaded.
-Once you unzip the downloaded file, you can open the folder and run each worksheet
-using Jupyter. See Chapter \@ref(getting-started-with-jupyter) for instructions on how to use Jupyter.
+can be found at [https://worksheets.datasciencebook.ca](https://worksheets.datasciencebook.ca).
+The worksheets can be run directly from that page,
+or downloaded to your computer as a compressed zip folder.
+Once you unzip the downloaded file, you can open the folder and 
+run each worksheet using Jupyter. See Chapter \@ref(getting-started-with-jupyter) for
+instructions on how to use Jupyter.
