--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -2,30 +2,186 @@
 
 ## Overview
 
-In this chapter, you'll learn how to install all of the software 
+In this chapter, you'll learn how to set up the software 
 needed to follow along with this book on your own computer.
+Given that installation instructions can vary
+widely based on the computer setup, we have created instructions for multiple
+operating systems. In particular, the installation instructions below have
+been verified to work on a computer that:
+
+- runs one of the following operating systems: 
+  - Ubuntu 22.04
+  - macOS Big Sur (version 11.4.x or 11.5.x)
+  - Windows 10 Home
+- uses a 64-bit CPU,
+- has a connection to the internet,
+- uses English as the default language.
+
 
 ## Chapter learning objectives
 
 By the end of the chapter, readers will be able to do the following:
 
-- Install the Git version control software.
-- Install and launch a local instance of JupyterLab with the R kernel.
 - Download the worksheets that accompany the chapters of this book from GitHub.
+- Install the Docker virtualization engine.
+- Run JupyterLab with the R kernel inside a Docker container.
 
-## Installing software on your own computer
+## Obtaining the worksheets for this book
 
-This section will provide instructions for installing the software required by 
-this book on your own computer. 
-Given that installation instructions can vary widely based on the computer setup,
-we have created instructions for multiple operating systems.
-In particular, the installation instructions below have been verified to work
-on a computer that:
+The worksheets containing practice exercises for this book 
+can be found at [https://worksheets.datasciencebook.ca](https://worksheets.datasciencebook.ca).
+The worksheets can be launched directly from that page using the Binder links in the rightmost
+column of the table. This is the easiest way to access the worksheets, but note that you will not 
+be able to save your work and return to it again later.
 
-- runs one of the following operating systems: Ubuntu 20.04, macOS Big Sur (version 11.4.x or 11.5.x), Windows 10 Professional, Enterprise or Education (version 2004, 20H2, or 21H1),
-- has a connection to the internet,
-- uses a 64-bit CPU,
-- uses English as the default language.
+In order to save your progress, you will need to download the worksheets to your own computer and 
+work on them locally. You can download the worksheets as a compressed zip file 
+using [the link at the top of the page](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets/archive/refs/heads/main.zip).
+Once you unzip the downloaded file, you will have a folder containing all of the Jupyter notebook worksheets
+accompanying this book. See Chapter \@ref(getting-started-with-jupyter) for
+instructions on working with Jupyter notebooks.
+
+## Running the worksheets with Docker (recommended)
+
+Once you have downloaded the worksheets to your computer, 
+you will next need to install and run the software required to work on Jupyter notebooks
+on your own computer. Doing this setup manually can be quite tricky, as it involves quite a 
+few different software packages, not to mention getting the right versions of everything&mdash;the worksheets
+may not work unless all the versions are exactly right! 
+
+To keep things simple, we instead recommend that you install [Docker](https://docker.com). Docker lets you 
+run a pre-built *virtual machine* that comes with precisely the right versions of all software packages needed 
+run the worksheets that come with this book.
+
+### Ubuntu
+
+https://docs.docker.com/engine/install/ubuntu/
+```
+sudo apt update
+sudo apt install ca-certificates curl gnupg
+curl -fsSL https://get.docker.com -o get-docker.sh
+sudo sh get-docker.sh
+```
+
+### MacOS
+
+https://docs.docker.com/desktop/install/mac-install/
+
+Double-click Docker.dmg to open the installer, then drag the Docker icon to the Applications folder.
+
+Double-click Docker.app in the Applications folder to start Docker.
+
+The Docker menu (whale menu) displays the Docker Subscription Service Agreement window.
+
+Here’s a summary of the key points:
+
+Docker Desktop is free for small businesses (fewer than 250 employees AND less than $10 million in annual revenue), personal use, education, and non-commercial open source projects.
+Otherwise, it requires a paid subscription for professional use.
+Paid subscriptions are also required for government entities.
+The Docker Pro, Team, and Business subscriptions include commercial use of Docker Desktop.
+Select Accept to continue.
+
+Note that Docker Desktop will not run if you do not agree to the terms. You can choose to accept the terms at a later date by opening Docker Desktop.
+
+For more information, see Docker Desktop Subscription Service Agreement. We recommend that you also read the FAQs.
+
+From the installation window, select either:
+Use recommended settings (Requires password). This let’s Docker Desktop automatically set the necessary configuration settings.
+Use advanced settings. You can then set the location of the Docker CLI tools either in the system or user directory, enable the default Docker socket, and enable privileged port mapping. See Settings, for more information and how to set the location of the Docker CLI tools.
+Select Finish. If you have applied any of the above configurations that require a password in step 5, you are asked to enter your password to confirm.
+
+### Windows
+
+https://docs.docker.com/desktop/install/windows-install/
+use WSL 2 backend instructions
+run wsl --update in cmd.exe
+
+Install Docker Desktop on Windows
+Install interactively
+Double-click Docker Desktop Installer.exe to run the installer.
+
+If you haven’t already downloaded the installer (Docker Desktop Installer.exe), you can get it from Docker Hub. It typically downloads to your Downloads folder, or you can run it from the recent downloads bar at the bottom of your web browser.
+
+When prompted, ensure the Use WSL 2 instead of Hyper-V option on the Configuration page is selected or not depending on your choice of backend.
+
+If your system only supports one of the two options, you will not be able to select which backend to use.
+
+Follow the instructions on the installation wizard to authorize the installer and proceed with the install.
+
+When the installation is successful, click Close to complete the installation process.
+
+If your admin account is different to your user account, you must add the user to the docker-users group. Run Computer Management as an administrator and navigate to Local Users and Groups > Groups > docker-users. Right-click to add the user to the group. Log out and log back in for the changes to take effect.
+
+### Running the worksheets without Docker (advanced users)
+
+- Git
+- miniconda
+- JupyterLab
+- jupyterlab-git extension
+
+
+
+- jupyterlab-git 
+conda install -c conda-forge -y jupyterlab
+conda install -y nodejs
+pip install --upgrade jupyterlab-git
+
+R, R packages, and the IRkernel 
+
+To have the software \index{R installation} used in this book available to you in JupyterLab, 
+you will need to install the R programming language,
+several R packages,
+and the \index{kernel!installation} IRkernel.
+To install versions of these that are compatible with the accompanying worksheets, 
+type the command shown below into the Anaconda Prompt (Windows) 
+or terminal (MacOS and Ubuntu). 
+
+```
+conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
+```
+
+This command installs the specific R and package versions specified in
+the `environment.yml` file found in 
+[the worksheets repository](https://worksheets.datasciencebook.ca).
+We will always keep the versions in the `environment.yml` file updated
+so that they are compatible with the exercise worksheets that accompany the book.
+
+> You can also install the *latest* version of R 
+> and the R packages used in this book by typing the commands shown below 
+> in the Anaconda Prompt (Windows) 
+> or terminal (MacOS and Ubuntu) and pressing enter.
+> **Be careful though:** this may install package versions that are
+> incompatible with the worksheets that accompany the book; the automated
+> exercise feedback might tell you your answers are not correct even though
+> they are!
+> 
+> ```
+> conda install -c conda-forge -y \
+>   r-base \
+>   r-cowplot \
+>   r-ggally \
+>   r-gridextra \
+>   r-irkernel \
+>   r-kknn \
+>   r-rpostgres \
+>   r-rsqlite \
+>   r-scales \
+>   r-testthat \
+>   r-tidymodels \
+>   r-tidyverse \
+>   unixodbc
+> ```
+
+Finishing up installation
+
+It is good practice to restart all the programs you used when installing this
+software stack before you proceed to doing your data analysis.
+This includes restarting JupyterLab as well as the terminal (MacOS and Ubuntu) 
+or the Anaconda Prompt (Windows).
+This will ensure all the software and settings you put in place are 
+correctly sourced. 
+
+
 
 ### Git
 
@@ -155,129 +311,4 @@ or terminal (MacOS and Ubuntu) and press enter:
 jupyter labextension install @techrah/text-shortcuts
 ```
 
-### R, R packages, and the IRkernel 
 
-To have the software \index{R installation} used in this book available to you in JupyterLab, 
-you will need to install the R programming language,
-several R packages,
-and the \index{kernel!installation} IRkernel.
-To install versions of these that are compatible with the accompanying worksheets, 
-type the command shown below into the Anaconda Prompt (Windows) 
-or terminal (MacOS and Ubuntu). 
-
-```
-conda env update --file https://raw.githubusercontent.com/UBC-DSCI/data-science-a-first-intro-worksheets/main/environment.yml
-```
-
-This command installs the specific R and package versions specified in
-the `environment.yml` file found in 
-[the worksheets repository](https://worksheets.datasciencebook.ca).
-We will always keep the versions in the `environment.yml` file updated
-so that they are compatible with the exercise worksheets that accompany the book.
-
-> You can also install the *latest* version of R 
-> and the R packages used in this book by typing the commands shown below 
-> in the Anaconda Prompt (Windows) 
-> or terminal (MacOS and Ubuntu) and pressing enter.
-> **Be careful though:** this may install package versions that are
-> incompatible with the worksheets that accompany the book; the automated
-> exercise feedback might tell you your answers are not correct even though
-> they are!
-> 
-> ```
-> conda install -c conda-forge -y \
->   r-base \
->   r-cowplot \
->   r-ggally \
->   r-gridextra \
->   r-irkernel \
->   r-kknn \
->   r-rpostgres \
->   r-rsqlite \
->   r-scales \
->   r-testthat \
->   r-tidymodels \
->   r-tidyverse \
->   r-tinytex \
->   unixodbc
-> ```
-
-### LaTeX
-
-To be able to render `.ipynb` files to `.pdf` you need to install a LaTeX 
-distribution. These can be quite large, so we will opt to use `tinytex`, a 
-light-weight cross-platform, portable, and easy-to-maintain LaTeX distribution 
-based on TeX Live. 
-
-**MacOS:** To install `tinytex` 
-we need to make sure that `/usr/local/bin` is writable. 
-To do this, type the following in the terminal:
-
-```
-sudo chown -R $(whoami):admin /usr/local/bin
-```
-
->  **Note:** You might be asked to enter your password during installation.
-
-**All operating systems:** 
-To install LaTeX, open JupyterLab by typing `jupyter lab` 
-in the Anaconda Prompt (Windows) or terminal (MacOS and Ubuntu) and press Enter.
-Then from JupyterLab, open an R console, type the commands listed below, and 
-press Shift + Enter to install `tinytex`:
-
-```
-tinytex::install_tinytex()
-tinytex::tlmgr_install(c("eurosym", 
-                         "adjustbox",
-                         "caption",
-                         "collectbox",
-                         "enumitem",
-                         "environ",
-                         "fp",
-                         "jknapltx",
-                         "ms",
-                         "oberdiek",
-                         "parskip",
-                         "pgf",
-                         "rsfs",
-                         "tcolorbox",
-                         "titling",
-                         "trimspaces",
-                         "ucs",
-                         "ulem",
-                         "upquote"))
-```
-
-**Ubuntu:** 
-To append the TinyTex executables to our `PATH` we need to edit our `.bashrc file`. 
-The TinyTex executables are usually installed in `~/bin`. 
-Thus, add the lines below to the bottom of your `.bashrc` file 
-(which you can open by `nano ~/.bashrc` and save the file:
-
-```
-# Append TinyTex executables to the path
-export PATH="$PATH:~/bin"
-```
-
->  **Note:** If you used `nano` to open your `.bashrc` file, 
-follow the keyboard shortcuts at the bottom of the nano text editor 
-to save and close the file.
-
-## Finishing up installation
-
-It is good practice to restart all the programs you used when installing this
-software stack before you proceed to doing your data analysis.
-This includes restarting JupyterLab as well as the terminal (MacOS and Ubuntu) 
-or the Anaconda Prompt (Windows).
-This will ensure all the software and settings you put in place are 
-correctly sourced. 
-
-## Downloading the worksheets for this book
-
-The worksheets containing practice exercises for this book 
-can be found at [https://worksheets.datasciencebook.ca](https://worksheets.datasciencebook.ca).
-The worksheets can be run directly from that page,
-or downloaded to your computer as a compressed zip folder.
-Once you unzip the downloaded file, you can open the folder and 
-run each worksheet using Jupyter. See Chapter \@ref(getting-started-with-jupyter) for
-instructions on how to use Jupyter.
