--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -104,11 +104,14 @@ and download the `Docker Desktop Installer.exe` file. Double-click the file to o
 and follow the instructions on the installation wizard, choosing **WSL-2** instead of **Hyper-V** when prompted.
 
 Occasionally, when you first run Docker on Windows, you will encounter an error message. Some common errors and
-- If it complains that you need to update WSL, open `cmd.exe` and type `wsl --update`.
-- If it complains that you need to enable virtualization, reboot your computer, look in your bios for CPU flags.
-- If the admin account on your computer is different to your user account, you must add the user to the docker-users group. 
-  Run Computer Management as an administrator and navigate to Local Users and Groups > Groups > docker-users. Right-click to 
+- If you need to update WSL, you can enter `cmd.exe` in the Start menu to run the command line. Type `wsl --update` to update WSL.
+- If the admin account on your computer is different to your user account, you must add the user to the "docker-users" group. 
+  Run Computer Management as an administrator and navigate to `Local Users` and `Groups -> Groups -> docker-users`. Right-click to 
   add the user to the group. Log out and log back in for the changes to take effect.
+- If you need to enable virtualization, you will need to edit your BIOS. Restart your computer, and enter the BIOS using the hotkey
+  (usually Delete, Esc, and/or one of the F# keys). Look for an "Advanced" menu, and under your CPU settings, set the "Virtualization" option
+  to "enabled". Then save the changes and reboot your machine. If you are not familiar with BIOS editing, you may want to find an expert 
+  to help you with this, as editing the BIOS can be dangerous. Detailed instructions for doing this are beyond the scope of this book. 
 More information on installing and running
 Docker on Windows, as well as troubleshooting tips, can be found [in the online
 Docker documetation](https://docs.docker.com/desktop/install/windows-install/).
