added chmod to ubuntu docker install

--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -62,6 +62,7 @@ To install Docker on Ubuntu, open the terminal and enter the following five comm
 sudo apt update
 sudo apt install ca-certificates curl gnupg
 curl -fsSL https://get.docker.com -o get-docker.sh
+sudo chmod u+x get-docker.sh
 sudo sh get-docker.sh
 ```
 Then in the terminal, navigate to the directory where you want to run JupyterLab, and run
