--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -104,7 +104,8 @@ To install Docker on Windows, visit [the online Docker documentation](https://do
 and download the `Docker Desktop Installer.exe` file. Double-click the file to open the installer
 and follow the instructions on the installation wizard, choosing **WSL-2** instead of **Hyper-V** when prompted.
 
-Occasionally, when you first run Docker on Windows, you will encounter an error message. Some common errors and
+Occasionally, when you first run Docker on Windows, you will encounter an error message. Some common errors you may see:
+
 - If you need to update WSL, you can enter `cmd.exe` in the Start menu to run the command line. Type `wsl --update` to update WSL.
 - If the admin account on your computer is different to your user account, you must add the user to the "docker-users" group. 
   Run Computer Management as an administrator and navigate to `Local Users` and `Groups -> Groups -> docker-users`. Right-click to 
