--- a/source/setup.Rmd
+++ b/source/setup.Rmd
@@ -121,7 +121,7 @@ Docker documetation](https://docs.docker.com/desktop/install/windows-install/).
 
 Once Docker is running (in either Windows or MacOS), you need to download and run the virtual machine that we have made available
 for the worksheets. In the search bar, enter `ubcdsci/r-dsci-100`, as this is the name of the virtual machine image. You will be presented
-with a few options (\@ref(fig:docker-desktop-search)). In the "Tag" drop down menu, click the tag `20230724142640d8f06f` to select the 
+with a few options (Figure \@ref(fig:docker-desktop-search)). In the "Tag" drop down menu, click the tag `20230724142640d8f06f` to select the 
 correct version of the image. Then click the "Pull" button to download the image.
 
 ```{r docker-desktop-search, echo = FALSE, fig.cap = "The Docker Desktop search window. Make sure to click the Tag drop down menu and find the right version of the image before clicking the Pull button to download it.", fig.retina = 2, out.width="100%"}
@@ -137,7 +137,7 @@ image_read("img/setup/docker-2.png") |>
   image_crop("3632x2000")
 ```
 
-To run the virtual machine, click the play button beside the image. This will open the run configuration menu (\@ref(fig:docker-desktop-runconfig)).
+To run the virtual machine, click the play button beside the image. This will open the run configuration menu (Figure \@ref(fig:docker-desktop-runconfig)).
 In the "Host port" textbox, enter `8888`. In the "Volumes" section, click the "Host path" box and navigate to the folder where your Jupyter worksheets
 are stored. In the "Container path" text box, enter `/home/jovyan/work`. Then click the "Run" button to start the container.
 
@@ -149,7 +149,7 @@ image_read("img/setup/docker-3.png") |>
 After clicking the "Run" button, you will see a terminal. The terminal will then print 
 some text as the Docker container starts. Once the text stops scrolling, find the 
 URL in the terminal that starts 
-with `http://127.0.0.1:8888` (highlighted by the red box Figure \@ref(fig:ubuntu-docker-terminal)), and paste it 
+with `http://127.0.0.1:8888` (highlighted by the red box in Figure \@ref(fig:ubuntu-docker-terminal)), and paste it 
 into your browser to start JupyterLab.
 
 ```{r docker-desktop-url, echo = FALSE, fig.cap = "The terminal text after running the Docker container in Ubuntu. The red box indicates the URL that you should paste into your browser to open JupyterLab.", fig.retina = 2, out.width="100%"}
